--- a/mybot_navigation/config/global_costmap_params.yaml
+++ b/mybot_navigation/config/global_costmap_params.yaml
@@ -1,9 +1,5 @@
 global_costmap:
-  global_frame: odom
+  global_frame: /map
   robot_base_frame: base_link
-  update_frequency: 10.0
-  publish_frequency: 10.0
-  resolution: 0.05
+  update_frequency: 5.0
   static_map: true
-  width: 10.0
-  height: 10.0
