--- a/my_sensor_configuration_dep/CMakeLists.txt
+++ b/my_sensor_configuration_dep/CMakeLists.txt
@@ -7,7 +7,11 @@ project(my_sensor_configuration_dep)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED COMPONENTS
+  nav_msgs
+  roscpp
+  tf
+)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -66,7 +70,7 @@ find_package(catkin REQUIRED)
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
+#   nav_msgs
 # )
 
 ################################################
@@ -100,8 +104,8 @@ find_package(catkin REQUIRED)
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES my_sensor_configuration_dep
-#  CATKIN_DEPENDS other_catkin_pkg
+#  LIBRARIES arduino
+#  CATKIN_DEPENDS nav_msgs roscpp tf
 #  DEPENDS system_lib
 )
 
@@ -113,12 +117,12 @@ catkin_package(
 ## Your package locations should be listed before other locations
 include_directories(
 # include
-# ${catkin_INCLUDE_DIRS}
+  ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/my_sensor_configuration_dep.cpp
+#   src/${PROJECT_NAME}/arduino.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -129,7 +133,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/my_sensor_configuration_dep_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/arduino_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -193,10 +197,15 @@ include_directories(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_my_sensor_configuration_dep.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_arduino.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
+
+add_compile_options(-std=c++11)
+add_executable(laser_tf.cpp src/laser_tf.cpp)
+target_link_libraries(laser_tf.cpp ${catkin_LIBRARIES})
+
