--- a/mybot_navigation/config/costmap_common_params.yaml
+++ b/mybot_navigation/config/costmap_common_params.yaml
@@ -1,6 +1,11 @@
-obstacle_range: 5.0
-raytrace_range: 5.0
+obstacle_range: 2.5
+raytrace_range: 3.0
 footprint: [[-0.50, -0.40], [-0.50, 0.40], [0.50, 0.40], [0.50, -0.40]]
+#robot_radius: ir_of_robot
 inflation_radius: 0.55
+
 observation_sources: laser_scan_sensor #point_cloud_sensor
-laser_scan_sensor: {sensor_frame: rplidar, data_type: LaserScan, topic: /scan, marking: true, clearing: true}
+
+laser_scan_sensor: {sensor_frame: laser, data_type: LaserScan, topic: scan, marking: true, clearing: true}
+
+#point_cloud_sensor: {sensor_frame: laser, data_type: PointCloud, topic: /scan, marking: true, clearing: true}
