--- a/mybot_navigation/config/base_local_planner_params.yaml
+++ b/mybot_navigation/config/base_local_planner_params.yaml
@@ -1,16 +1,18 @@
-controller_frequency: 9
-recovery_behaviour_enabled: true
+recovery_behavior_enabled: true
 
 TrajectoryPlannerROS:
-  max_vel_x: 2.0
-  min_vel_x: 0.1
-  max_vel_theta: 2.5
-  min_in_place_vel_theta: 0.2
+
+  max_vel_x: 0.6
+  min_vel_x: 0.15
+  min_vel_theta: -2.0
+  max_vel_theta: 2.0
+  min_in_place_vel_theta: 0.55
+  escape_vel: -0.15
   meter_scoring: true
 
-  acc_lim_x: 0.5
+  acc_lim_x: 1.0
   acc_lim_y: 0.0
-  acc_lim_theta: 0.8
+  acc_lim_theta: 2.0
 
   yaw_goal_tolerance: 0.5
   xy_goal_tolerance: 0.3
